A11y: Fix another contrast error on screen-reader-text #12

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ Author: Bobbing Wide
 Author URI: http://bobbingwide.com/about-bobbing-wide
 Template: genesis 
 Template Version: 3.6.1
-Version: 1.1.1
+Version: 1.1.2
 Tags: black, orange, white, one-column, two-columns, three-columns, left-sidebar, right-sidebar, responsive-layout, custom-menu, full-width-template, rtl-language-support, sticky-post, theme-options, threaded-comments, translation-ready  
 License: GPL-2.0+  
 License URI: http://www.gnu.org/licenses/gpl-2.0.html  
@@ -1378,6 +1378,10 @@ li.comment {
 
 .more-link {
 	position: relative;
+}
+
+.footer-widgets .screen-reader-text {
+	color: #ffffff;
 }
 
 
